[package]
name = "han2zen"
version = "0.1.1"
authors = ["YUUKIToriyama <github@toriyama.dev>"]
description = "WASM Module which converts Halfwidth Katakana to Fullwidth Katakana"
repository = "https://github.com/YUUKIToriyama/han2zen"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.73"
